# simple-alpha-zero

./: .gitignore  .pdm-python  export-import.py  flake.nix  mcts.py  neural_network.py  pyproject.toml  trainer.py
configs/: connect4-cpu.json
games/: connect4.py
models/: smallvgg.py
nix/: simple-alpha-zero.nix
