[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"


[project]
name = "simple_alpha_zero"
version = "0.0.0"

requires-python = ">=3.10"

dependencies = [
    "scipy",
    "numpy",
    "torch==2.5.*",
    "torchvision",
    "matplotlib",
]


[tool.setuptools.packages.find]
exclude = [
    "project_webpage*",
    "tests*",
    "nix*",
]
